changed the clearing_radius. otherwise the planner wouldn't run

--- a/active_3d_planning_app_reconstruction/cfg/planners/example_config.yaml
+++ b/active_3d_planning_app_reconstruction/cfg/planners/example_config.yaml
@@ -32,6 +32,7 @@ trajectory_generator:
   type: "Uniform"
   collision_optimistic: false
   bounding_volume_args: "/map_bounding_volume"
+  clearing_radius: 5.0
 
   # Generator Params
   n_segments: 5
