revert selectNextBest, update Gallery.yaml, use exploration.yaml

--- a/active_3d_planning_app_reconstruction/cfg/experiments/Gallery.yaml
+++ b/active_3d_planning_app_reconstruction/cfg/experiments/Gallery.yaml
@@ -2,32 +2,32 @@
 
 # Bounding boxes (in initialization frame, relative to PlayerStart)
 map_bounding_volume:
-  x_min: -10.0
-  x_max: 10.0
-  y_min: -15.0
-  y_max: 15.0
+  x_min: -10.5
+  x_max: 10.5
+  y_min: -15.5
+  y_max: 15.5
   z_min: 0
-  z_max: 10
+  z_max: 3.0 #10
 
 evaluation_bounding_volum:
-  x_min: -15.0
-  x_max: 15.0
-  y_min: -10.0
-  y_max: 10.0
+  x_min: -10.5
+  x_max: 10.5
+  y_min: -15.5
+  y_max: 15.5
   z_min: 0
-  z_max: 10
+  z_max: 3.0 #10
 
 target_bounding_volume:
-  x_min: -15.0
-  x_max: 15.0
-  y_min: -10.0
-  y_max: 10.0
+  x_min: -10.5
+  x_max: 10.5
+  y_min: -15.5
+  y_max: 15.5
   z_min: 0
-  z_max: 10
+  z_max: 3.0 #10
 
 # System Constraints
 planner:
   system_constraints:
-    v_max: 1.0
+    v_max: 0.75
     a_max: 1.0
-    yaw_rate_max: 1.57
+    yaw_rate_max: 1.047
