--- a/active_3d_planning_app_reconstruction/cfg/planners/example_config.yaml
+++ b/active_3d_planning_app_reconstruction/cfg/planners/example_config.yaml
@@ -32,7 +32,7 @@ trajectory_generator:
   type: "Uniform"
   collision_optimistic: false
   bounding_volume_args: "/map_bounding_volume"
-  clearing_radius: 20.0
+  # clearing_radius: 20.0
 
   # Generator Params
   n_segments: 10
