--- a/active_3d_planning_app_reconstruction/cfg/planners/aoracle_baseline.yaml
+++ b/active_3d_planning_app_reconstruction/cfg/planners/aoracle_baseline.yaml
@@ -2,9 +2,9 @@
 replan_pos_threshold: 0.15
 replan_yaw_threshold: 0.15
 
-max_new_segments: 0
+max_new_segments: 1024 #0
 min_new_segments: 0
-max_new_tries: 0
+max_new_tries: 1024 #0
 min_new_tries: 0
 min_new_value: 0
 
